# raytracer

./: .gitignore  CMakeLists.txt  camera.h  color.h  hittable.h  hittable_list.h  interval.h  main.cpp  material.h  ray.h  sphere.h  utils.h  vec3.h
